# SimCenterBootcamp2023

assignments/C-Day1/: CMakeLists.txt  README.md  pi.c  solveQuadratic.c  transformStress.c
assignments/C-Day2/: README.md
assignments/C-Day2/binaryFile/: file3.c
assignments/C-Day2/matMul/: matMul.c  myDGEMM.c
assignments/C-Day2/stressTransformStruct/: stresstransform.c  stresstransform.h
assignments/C-Day3/: README.md
assignments/C-Day3/ex1/: file3.cpp
assignments/C-Day3/ex2/: CMakeLists.txt  Eqtriangle.cpp  Eqtriangle.h  main5.cpp
assignments/C-Day4/: README.md
assignments/C-Day4/ex1/: CMakeLists.txt  pi.c
assignments/C-Day4/ex2/: CMakeLists.txt  scatterArray.c
assignments/C-Day5/: README.md
assignments/C-Day5/ex1/: CMakeLists.txt  hello1.c  normVector2.c
